# mermaid-rs-renderer

./: .gitignore  COMPARISON_CHANGES.md  Cargo.toml  flowchart-test.md  package-lock.json
docs/: comparison.html
mermaid-rs-ffi/: Cargo.toml  build-xcframework.sh
mermaid-rs-ffi/MermaidRenderer.xcframework/: Info.plist
mermaid-rs-ffi/MermaidRenderer.xcframework/ios-arm64/Headers/mermaid_rs_ffiFFI/: module.modulemap
mermaid-rs-ffi/MermaidRenderer.xcframework/macos-arm64_x86_64/Headers/mermaid_rs_ffiFFI/: mermaid_rs_ffiFFI.h
mermaid-rs-ffi/src/: lib.rs
src/: cli.rs  config.rs  icons.rs  ir.rs  layout_dump.rs  lib.rs  parser.rs  render.rs  text_metrics.rs  theme.rs
src/layout/: architecture.rs  block.rs  brandes_kopf.rs  c4.rs  error.rs  gantt.rs  gitgraph.rs  ishikawa.rs  journey.rs  kanban.rs  label_placement.rs  markdown.rs  mindmap.rs  mod.rs  network_simplex.rs  pie.rs  quadrant.rs  radar.rs  ranking.rs  routing.rs  sankey.rs  sequence.rs  state_dagre.rs  text.rs  timeline.rs  tree_view.rs  treemap.rs  types.rs  venn.rs  wardley.rs  xychart.rs
tests/: layout_suite.rs  quality_baseline.json
tests/mermaid-js-comparison/: package-lock.json  package.json  render-comparison.sh
tests/visual/: architecture.md  block.md  c4.md  classDiagram.md  entityRelationshipDiagram.md  examples.md  flowchart.md  gantt.md  gitgraph.md  kanban.md  mindmap.md  packet.md  pie.md  quadrantChart.md  radar.md  requirementDiagram.md  sankey.md  sequenceDiagram.md  stateDiagram.md  timeline.md  treemap.md  userJourney.md  venn.md  xyChart.md  zenuml.md
(+393 files in other folders)
